--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -712,6 +712,12 @@ acceptedBreaks:
       justification: "this is fine"
   "0.64.0":
     com.datadoghq:dd-trace-ot:
+    - code: "java.class.removed"
+      old: "class datadog.common.exec.AgentTaskScheduler"
+      justification: "moved to datadog.trace.api.exec"
+    - code: "java.class.removed"
+      old: "class datadog.common.exec.DaemonThreadFactory"
+      justification: "moved to datadog.trace.api.exec"
     - code: "java.method.removed"
       old: "method <T> T[] java.util.concurrent.ConcurrentLinkedDeque<E>::toArray(T[])\
         \ @ datadog.trace.core.PendingTrace"
