don't assert inverse for ancient versions of Akka because some but not all akka-concurrent instrumentations pass

--- a/dd-java-agent/instrumentation/akka-concurrent/akka-concurrent.gradle
+++ b/dd-java-agent/instrumentation/akka-concurrent/akka-concurrent.gradle
@@ -10,7 +10,8 @@ muzzle {
     group = 'com.typesafe.akka'
     module = "akka-actor_$scalaVersion"
     versions = "[$akkaVersion,]"
-    assertInverse = true
+    // some older versions of Akka pass
+    assertInverse = false
   }
 }
 
